# SkillsReader

./: .env.example  .gitignore  README.md  domestic_recent_24h_2026-06-24.xlsx  domestic_recent_24h_snapshot.xlsx  official_scan_new.xlsx
backend/: Dockerfile  pyproject.toml
backend/app/: init_db.py  main.py
backend/app/adapters/: __init__.py  base.py
backend/app/api/: debug.py  digest.py  helpers.py  push.py  ruliu_callback.py  scan.py  skills.py  sources.py  stats.py  testbench.py
backend/app/core/: config.py  database.py  (+2 more)
backend/data/: test_vendor_relevance_cache.json  vendor_relevance_cache.json
backend/scripts/: dedupe_vendor_skills.py  fix_xhs_detail_urls.py  init_test_db.py  probe_sources.py  restart_backend.sh  resync_ctrip.py  resync_dewu.py  resync_kuaishou_didi.py  resync_pinduoduo.py  resync_tencent.py  run_daily_collect.py  run_domestic_full_scan_export.py  seed_testbench_demo.py
backend/tests/: test_bilibili_filters.py  test_core.py  test_ctrip_filters.py  test_dewu_filters.py  test_didi_filters.py  test_digest.py  test_digest_formatter.py  test_growth_metrics_timeline.py  test_kuaishou_filters.py  test_normalizer_quality.py  test_official_github_config.py  test_official_scan.py  test_pinduoduo_filters.py  test_platform_filters.py  test_push_desc.py  test_record_dedup.py  test_ruliu_commands.py  test_ruliu_push_format.py  test_skill_classification.py  test_skill_export.py  test_skill_gate.py  test_skill_links.py  test_skills_sh_adapter.py  test_skillsmp_catalog.py  test_tencent_filters.py  test_vendor_relevance.py  test_zhihu_catalog.py
(+145 files in other folders)
