[project]
name = "iknow-backend"
version = "1.0.0"
description = "IKnow Skill Scanner - domestic super-app skill intelligence"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiomysql>=0.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "redis>=5.2.0",
    "pyyaml>=6.0.2",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "openai>=1.57.0",
    "python-dotenv>=1.0.1",
    "websockets>=14.0",
    "alembic>=1.14.0",
    "pycryptodome>=3.21.0",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[project.scripts]
iknow-api = "app.main:main"
iknow-worker = "app.worker.scan_loop:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
